When generating upward call graph, support generate separate files for each method

--- a/java-all-call-graph/src/main/resources/~jacg_config/config.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/config.properties
@@ -20,7 +20,7 @@ db.password=
 call.graph.jar.list=
 
 # 将调用关系及类名写入数据库中时，是否忽略非指定包中的类，true/false
-input.ignore.other.package=true
+input.ignore.other.package=false
 
 # 生成调用链时的详细程度
 # 1: 最详细 完整类名+方法名+方法参数
@@ -33,3 +33,6 @@ show.method.annotation=true
 
 # 生成调用链时，是否需要生成合并的文件，true/false
 gen.combined.output=true
+
+# 生成向上的调用链时，是否需要为每个方法生成单独的文件，true/false
+gen.upwards.methods.file=true
