--- a/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_ignore_full_method_prefix.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_ignore_full_method_prefix.properties
@@ -1,3 +1,4 @@
 # 生成指定类调用的所有向下的调用关系时的配置文件
 # 指定忽略的完整方法前缀，可指定包名，或包名+类名，或包名+类名+方法名，或包名+类名+方法名+参数
 # 示例: com.test com.test.Test1 com.test.Test1:func1 com.test.Test1:func1( com.test.Test1:func1(java.lang.String)
+java.
