--- a/java-all-call-graph/src/main/resources/~jacg_config/config.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/config.properties
@@ -1,6 +1,6 @@
 # 当前应用的调用关系写入数据库里的表名后缀，分隔符不能使用-，需要使用_
 # app.name=test_app_name
-app.name=
+app.name=zzz
 
 # 并发处理线程数量/数据源连接池数量（若超过了需要处理的任务数量，会使用任务数量作为线程数量）
 thread.num=20
@@ -11,13 +11,14 @@ db.driver.name=com.mysql.cj.jdbc.Driver
 # db.url=jdbc:mysql://1.1.1.1:3306/test_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true
 # db.username=test_username
 # db.password=test_password
-db.url=
-db.username=
-db.password=
+db.url=jdbc:mysql://127.0.0.1:3306/testdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true
+db.username=test
+db.password=123456
 
 # 需要通过java-callgraph生成调用关系文件的jar包列表，使用空格分隔
 # call.graph.jar.list=build/libs/xxx.jar
-call.graph.jar.list=
+#call.graph.jar.list=E:/git-dir/pri-code/sql-test/dist/apps/sql-test.jar
+call.graph.jar.list=E:/gradle-dir/caches/modules-2/files-2.1/org.mybatis/mybatis/3.5.6/28ea8fe7d6c3998cf1d0cb8af64b9d58f04c7cb3/mybatis-3.5.6.jar E:/gradle-dir/caches/modules-2/files-2.1/org.mybatis/mybatis-spring/2.0.6/eae03712acdf041a3590b816460945d4bd2691bc/mybatis-spring-2.0.6.jar E:/gradle-dir/caches/modules-2/files-2.1/org.springframework/spring-tx/4.3.26.RELEASE/8be2d458a656e75941211b0138b55a5249f9ccd3/spring-tx-4.3.26.RELEASE.jar
 
 # 将调用关系及类名写入数据库中时，是否忽略非指定包中的类，true/false
 input.ignore.other.package=false
@@ -33,6 +34,9 @@ show.method.annotation=true
 
 # 生成调用链时，是否需要生成合并的文件，true/false
 gen.combined.output=true
+
+# 生成调用链时，是否需要显示调用者源代码行号，true/false
+show.caller.line.num=true
 
 # 生成向上的调用链时，是否需要为每个方法生成单独的文件，true/false
 gen.upwards.methods.file=true
