--- a/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_ignore_method_prefix.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_ignore_method_prefix.properties
@@ -1,6 +1,10 @@
-# 生成指定类调用的所有向下的调用关系时的配置文件
+# 生成指定类调用的所有向下的方法完整调用链时的配置文件
 # 指定忽略的方法名前缀
-# 示例: func1 func1( func1() func1(java.lang.String)
+# 示例:
+# func1
+# func1(
+# func1()
+# func1(java.lang.String)
 # toString()
 # hashCode()
 # equals(java.lang.Object)
