add task to generate executable jar and copy other files

--- a/java-all-call-graph/.gitignore
+++ b/java-all-call-graph/.gitignore
@@ -1,13 +1,21 @@
-/bin/
-/.settings/
-
 /build/
-/.gradle/
-/.classpath
-/.project
-/.DS_Store
-/.idea/
+build/
 /dist/
-/out/
-*.class
+dist/
+/bin/
+bin/
+/out
+out/
+.project
+/.settings/
+.settings/
+/.idea/
+.idea/
+.gradle
+/.gradle
+/.DS_Store
 *.iml
+.classpath
+~jacg_output_for_callee/
+~jacg_output_for_caller/
+output_dir/
