--- a/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_entry_method.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_entry_method.properties
@@ -1,7 +1,7 @@
 # 生成指定类调用的所有向下的方法完整调用链时的配置文件
 # 指定需要生成的类名，与方法名前缀，以及起始代码行号、结束代码行号
 # 格式: [类名]:[方法名] [起始代码行号]-[结束代码行号]，或[类名]:[方法名+参数] [起始代码行号]-[结束代码行号]
-# 若存在同名类，则类名需要指定完整类名；若不存在同名类，则类名需要指定简单类名
+# 类名可指定简单类名或完整类名；若存在同名类，则需要指定完整类名
 # 若存在同名方法，则需要指定方法参数以区分，或者在o_g4caller_entry_method_ignore_prefix.properties中指定需要忽略的方法前缀
 # [起始代码行号]-[结束代码行号]为可选参数，若不指定则输出指定的整个方法向下的方法完整调用链
 # 若指定则输出方法指定行号范围内向下的方法完整调用链，即 >= 起始代码行号 且 <= 结束代码行号的范围
