--- a/java-all-call-graph/src/main/resources/~jacg_config/o_g4callee_class_name.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/o_g4callee_class_name.properties
@@ -1,7 +1,7 @@
 # 生成调用指定类的所有向上的方法完整调用链时的配置文件
 # 指定需要生成的类名
 # 格式: [类名]
-# 若存在同名类，则类名需要指定完整类名；若不存在同名类，则类名需要指定简单类名
+# 类名可指定简单类名或完整类名；若存在同名类，则需要指定完整类名
 # 示例:
 # Test1
 # com.test.Test1
