Add extended classes, including for obtaining MyBatis SQL information.

--- a/java-all-call-graph/build.gradle
+++ b/java-all-call-graph/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 group 'com.github.adrninistrator'
-version = "0.4.4"
+version = "0.5.0"
 def projectName = "java-all-call-graph"
 description = "${projectName}"
 sourceCompatibility = 1.8
@@ -54,7 +54,17 @@ List mysql = ['mysql:mysql-connector-java:8.0.20']
 
 List slf4j = ['org.slf4j:log4j-over-slf4j:1.7.30']
 
-List java_callgraph = ['com.github.adrninistrator:java-callgraph2:0.0.1']
+List java_callgraph = ['com.github.adrninistrator:java-callgraph2:0.0.2']
+
+List bcel = ['org.apache.bcel:bcel:6.5.0']
+
+def jackson_ver = "2.12.4"
+List jackson = [
+        "com.fasterxml.jackson.core:jackson-databind:$jackson_ver",
+        "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:$jackson_ver"
+]
+
+List dom4j = ['dom4j:dom4j:1.6.1']
 
 List log4j = [
         'org.apache.logging.log4j:log4j-api:2.14.1',
@@ -63,7 +73,7 @@ List log4j = [
 ]
 
 dependencies {
-    implementation apache_common, c3p0, mysql, slf4j, java_callgraph
+    implementation apache_common, c3p0, mysql, slf4j, java_callgraph, bcel, jackson, dom4j
     testImplementation log4j
 }
 
