--- a/java-all-call-graph/src/main/resources/~jacg_config/o_g4callee_class_name.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/o_g4callee_class_name.properties
@@ -1,4 +1,4 @@
-# 生成调用指定类的所有向上的方法完整调用链时的配置文件
+# 生成调用指定类的所有向上的方法完整调用链时的配置文件（每行指定一项配置，可指定多行）
 # 指定需要生成的类名
 # 格式: [类名]
 # 类名可指定简单类名或完整类名；若存在同名类，则需要指定完整类名
