--- a/java-all-call-graph/src/main/resources/~jacg_extensions/code_parser.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_extensions/code_parser.properties
@@ -1,2 +1,1 @@
-# 在此定义用于对代码进行解析的自定义处理类的完整类名
-com.adrninistrator.jacg.extensions.code_parser.GetMybatisSqlInfoCodeParser
+# 在此定义用于对代码进行解析的自定义处理类的完整类名（每行指定一项配置，可指定多行）
