--- a/java-all-call-graph/build.gradle
+++ b/java-all-call-graph/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 group 'com.github.adrninistrator'
-version = "0.5.6"
+version = "0.6.0"
 def projectName = "java-all-call-graph"
 description = "${projectName}"
 sourceCompatibility = 1.8
@@ -52,9 +52,11 @@ List c3p0 = ['com.mchange:c3p0:0.9.5.5']
 
 List mysql = ['mysql:mysql-connector-java:8.0.20']
 
+List h2database = ["com.h2database:h2:2.1.210"]
+
 List slf4j = ['org.slf4j:log4j-over-slf4j:1.7.30']
 
-List java_callgraph = ['com.github.adrninistrator:java-callgraph2:0.0.3']
+List java_callgraph = ['com.github.adrninistrator:java-callgraph2:0.0.4']
 
 def jackson_ver = "2.12.4"
 List jackson = [
@@ -65,13 +67,13 @@ List jackson = [
 List dom4j = ['dom4j:dom4j:1.6.1']
 
 List log4j = [
-        'org.apache.logging.log4j:log4j-api:2.14.1',
-        'org.apache.logging.log4j:log4j-core:2.14.1',
-        'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
+        'org.apache.logging.log4j:log4j-api:2.17.0',
+        'org.apache.logging.log4j:log4j-core:2.17.0',
+        'org.apache.logging.log4j:log4j-slf4j-impl:2.17.0'
 ]
 
 dependencies {
-    compile apache_common, c3p0, mysql, slf4j, java_callgraph, jackson, dom4j
+    compile apache_common, c3p0, mysql, h2database, slf4j, java_callgraph, jackson, dom4j
     testImplementation log4j
 }
 
