--- a/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_entry_method.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_entry_method.properties
@@ -1,4 +1,4 @@
-# 生成指定类调用的所有向下的方法完整调用链时的配置文件
+# 生成指定类调用的所有向下的方法完整调用链时的配置文件（每行指定一项配置，可指定多行）
 # 指定需要生成的类名，与方法名前缀，以及起始代码行号、结束代码行号
 # 格式: [类名]:[方法名] [起始代码行号]-[结束代码行号]，或[类名]:[方法名+参数] [起始代码行号]-[结束代码行号]
 # 类名可指定简单类名或完整类名；若存在同名类，则需要指定完整类名
