Modify properties files

--- a/java-all-call-graph/src/main/resources/~jacg_config/config.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/config.properties
@@ -21,7 +21,7 @@ db.url=
 db.username=
 db.password=
 
-# 需要通过java-callgraph生成调用关系文件的jar包列表，使用空格分隔
+# 需要通过java-callgraph2生成调用关系文件的jar包，或保存class、jar文件的目录列表，使用空格分隔
 # call.graph.jar.list=build/libs/xxx.jar
 call.graph.jar.list=
 
