--- a/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_entry_method_ignore_prefix.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_entry_method_ignore_prefix.properties
@@ -1,5 +1,5 @@
 # 生成指定类调用的所有向下的方法完整调用链时的配置文件（每行指定一项配置，可指定多行）
-# o_g4caller_entry_method.properties中指定的方法前缀可能找到多个方法，可以该文件中指定需要忽略的方法前缀
+# o_g4caller_entry_method.properties中指定的方法前缀可能找到多个方法，可在该文件中指定需要忽略的方法前缀
 # 格式: 方法名，或方法名+参数
 # 示例:
 # func1
