--- a/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_ignore_class_keyword.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_ignore_class_keyword.properties
@@ -1,6 +1,7 @@
-# 生成指定类调用的所有向下的方法完整调用链时的配置文件（每行指定一项配置，可指定多行）
-# 指定忽略的类名关键字，可为包名中的关键字，或类名中的关键字
-# 示例:
+# (作用) 生成指定类调用的所有向下的方法完整调用链时的配置文件（每行指定一项配置，可指定多行）
+# (内容) 指定忽略的类名关键字
+# (格式) 可指定包名中的关键字，或类名中的关键字
+# (示例)
 # .dto.
 # .entity.
 # Enum
