--- a/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_ignore_method_prefix.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/o_g4caller_ignore_method_prefix.properties
@@ -1,6 +1,6 @@
-# 生成指定类调用的所有向下的方法完整调用链时的配置文件（每行指定一项配置，可指定多行）
-# 指定忽略的方法名前缀
-# 示例:
+# (作用) 生成指定类调用的所有向下的方法完整调用链时的配置文件（每行指定一项配置，可指定多行）
+# (内容) 指定忽略的方法名前缀
+# (示例)
 # func1
 # func1(
 # func1()
