--- a/java-all-call-graph/src/main/resources/~jacg_config/config.properties
+++ b/java-all-call-graph/src/main/resources/~jacg_config/config.properties
@@ -45,3 +45,6 @@ show.caller.line.num=true
 
 # 生成向下的调用链时，在一个调用方法中出现多次的被调用方法（包含自定义数据），是否需要忽略，true/false
 ignore.dup.callee.in.one.caller=false
+
+# 生成向下的调用链时，若接口或父类存在多个实现类或子类，接口或父类方法调用多个实现类或子类方法的调用关系是否需要在当前文件中继续生成，否则会在单独的目录中生成，true/false
+multi.impl.gen.in.current.file=true
