--- a/java-all-call-graph/src/main/resources/_jacg_config/config.properties
+++ b/java-all-call-graph/src/main/resources/_jacg_config/config.properties
@@ -9,6 +9,9 @@ thread.num=20
 # 1: 最详细 完整类名+方法名+方法参数 2: 中等 完整类名+方法名 3: 最简单 简单类名（对于同名类展示完整类名）+方法名
 call.graph.output.detail=2
 
+# 生成向下的调用链时，在一个调用方法中出现多次的被调用方法（包含方法调用业务功能数据），是否需要忽略，true/false
+ignore.dup.callee.in.one.caller=false
+
 # 生成文件的根目录，以"/"或"\\"作为分隔符，末尾是否为分隔符不影响（默认为当前目录）
 output.root.path=
 
