--- a/java-all-call-graph/src/main/resources/_jacg_config/config.properties
+++ b/java-all-call-graph/src/main/resources/_jacg_config/config.properties
@@ -12,14 +12,17 @@ thread.num=20
 # 3: 最简单 简单类名（对于同名类展示完整类名）+方法名
 call.graph.output.detail=2
 
-# 生成向下的调用链时，在一个调用方法中出现多次的被调用方法（包含方法调用业务功能数据），是否需要忽略，true/false
+# 生成向下的调用链时，在一个调用方法中出现多次的被调用方法（包含方法调用业务功能数据），是否需要忽略，true:忽略，false:不忽略
 ignore.dup.callee.in.one.caller=false
 
 # 生成文件的根目录，以"/"或"\\"作为分隔符，末尾是否为分隔符不影响（默认为当前目录）
 output.root.path=
 
-# 生成调用链文件的子目录名（默认为[app.name]_[当前时间]）
-output.sub.dir.name=
+# 生成调用链文件的目录名中的标志，完整目录名使用[app.name][output.dir.flag]_[当前时间]，默认为空
+output.dir.flag=
+
+# 生成调用链文件的目录名，非空时目录名使用当前值，为空时使用上一个参数说明的格式
+output.dir.name=
 
 # 批量写入数据库时每次插入的数量
 db.insert.batch.size=1000
