--- a/java-all-call-graph/build.gradle
+++ b/java-all-call-graph/build.gradle
@@ -122,6 +122,10 @@ processResources {
     setDuplicatesStrategy(DuplicatesStrategy.INCLUDE)
 }
 
+processTestResources {
+    setDuplicatesStrategy(DuplicatesStrategy.INCLUDE)
+}
+
 task createProject {
     doFirst {
         sourceSets*.java.srcDirs*.each { it.mkdirs() }
