--- a/java-all-call-graph/.gitignore
+++ b/java-all-call-graph/.gitignore
@@ -13,8 +13,7 @@ _unittest_output/
 jar_output_dir/
 log/*.log
 log/*.gz
-src/test/resources/_jacg_config/
-src/test/resources/_jacg_find_stack_keyword/
+src/test/resources/_jacg_*
+src/test/resources/_javacg2_*
 src/test/resources/ogm.properties
-src/test/resources/_jacg_jar_diff_callee_graph/
 runlocal/
